kubernetes/homeassistant/00-homeassistant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    app: homeassistant
