kubernetes/homeassistant/03-homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
    env: prod
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        app: homeassistant
        env: prod
    spec:
      volumes:
       - name: storage-config-homeassistant
         persistentVolumeClaim:
          claimName: storage-config-homeassistant
      containers:
      - image: homeassistant/raspberrypi3-homeassistant:0.114.4
        name: home-assistant
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8123
        volumeMounts:
         - mountPath: "/config"
           name: storage-config-homeassistant
        securityContext:
          privileged: true
        readinessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 15
          periodSeconds: 5
      nodeSelector:
        env: prod
      restartPolicy: Always
