kubernetes/homeassistant/04-homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
  - name: homeasssitant
    protocol: TCP
    port: 8123
    targetPort: 8123
  selector:
    app: homeassistant
  type: LoadBalancer
